--- a/client/styles.css
+++ b/client/styles.css
@@ -44,9 +44,9 @@ button {
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  width: 20vh;
+  width: 200px;
   /* Set a fixed width */
-  height: 10vh;
+  height: 40px;
   /* Set a fixed height */
 }
 
