--- a/client/style.css
+++ b/client/style.css
@@ -1,54 +1,41 @@
 body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f0f0f0;
   margin: 0;
-  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #2C2F33;
+  color: white;
 }
 
-#root {
+.button-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   height: 100vh;
-}
-
-h1 {
-  color: #333;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  background-color: #fff;
-  margin: 5px 0;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  /* Optional: Adjust the height as needed */
 }
 
 button {
-  background-color: #4CAF50;
-  /* Green */
-  border: none;
-  color: white;
   padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
   font-size: 16px;
-  margin: 10px 2px;
-  cursor: pointer;
+  background-color: #1e4d1f;
+  color: white;
+  border: none;
   border-radius: 5px;
-  transition: background-color 0.3s ease;
-  width: 200px;
-  /* Set a fixed width */
-  height: 40px;
-  /* Set a fixed height */
+  cursor: pointer;
 }
+
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #2C2F33;
+  /* Background color for the container */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 
 button:hover {
   background-color: #45a049;
@@ -71,24 +58,4 @@ input[type="email"] {
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 5px;
-}
-
-#downloadBox {
-  background-color: #fff;
-  margin: 5px 0;
-  align-items: center;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-}
-
-#downloadBtn {
-  display: block;
-  margin: 0 auto;
-}
-
-#userForm {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
