--- a/client/style.css
+++ b/client/style.css
@@ -5,16 +5,24 @@ body {
   color: white;
 }
 
-.button-container {
+#title {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#game-container {
+  background-color: #131416;
+}
+
+.list-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
-  /* Optional: Adjust the height as needed */
 }
 
 button {
   padding: 10px 20px;
+  width: 100%;
   font-size: 16px;
   background-color: #1e4d1f;
   color: white;
@@ -49,10 +57,8 @@ label {
 input[type="text"],
 input[type="password"],
 input[type="email"] {
-  width: 200px;
-  /* Set a fixed width */
+  width: 100%;
   height: 40px;
-  /* Set a fixed height */
   padding: 10px;
   margin: 10px 0;
   box-sizing: border-box;
