--- a/client/style.css
+++ b/client/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #005ed8;
+  background-color: transparent;
   color: white;
   justify-content: center;
   align-items: center;
@@ -19,11 +19,12 @@ body {
 label {
   display: block;
   text-align: center;
-  font-size: 2.8vh;
+  font-size: 2vh;
   margin-top: 1vh;
 }
 
-#title {
+
+h1 {
   text-align: center;
   margin-top: 5vh;
   font-size: 6vh;
@@ -31,11 +32,12 @@ label {
 
 
 .game-container {
-  border-radius: 5vh;
+  border-radius: 1vh;
   background-color: #15171a;
   box-shadow: 0 1vh 2vh rgba(0, 0, 0, 0.1);
   padding: 5vh;
   display: inline-block;
+  width: 50%;
 }
 
 .list-container {
@@ -57,13 +59,17 @@ ul {
   justify-content: center;
   align-items: center;
   text-align: center;
+  font-size: 3vh;
 }
 
 #leaderboard-container {
-  background-color: #3274cc;
+  background-color: #141618;
+  font-size: 4vh;
   padding: 5vh;
   margin-top: 5vh;
   border-radius: 1vh;
+  width: 50%;
+
 }
 
 button {
@@ -84,7 +90,7 @@ button {
   justify-content: center;
   align-items: center;
   background-color: #2C2F33;
-  width: 30%;
+  width: 70vh;
   height: 100%;
 }
 
@@ -95,18 +101,263 @@ button:hover {
 
 label {
   display: block;
-  margin-top: 10px;
+  margin-top: 2vh;
 }
 
 input[type="text"],
 input[type="password"],
 input[type="email"] {
   width: 100%;
-  height: 40px;
-  padding: 10px;
-  margin: 10px 0;
+  height: 5vh;
+  margin: 1.25vh 0;
   box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 0.125vh solid #ccc;
+  border-radius: 0.5vh;
   text-align: center;
+}
+
+@keyframes move {
+  100% {
+    transform: translate3d(0, 0, 1px) rotate(360deg);
+  }
+}
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: #0e0e0e;
+  overflow: hidden;
+  z-index: -1;
+}
+
+
+
+.background span {
+  width: 20vmin;
+  height: 20vmin;
+  border-radius: 20vmin;
+  backface-visibility: hidden;
+  position: absolute;
+  animation: move;
+  animation-duration: 45;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+
+.background span:nth-child(0) {
+  color: #ff0066;
+  top: 50%;
+  left: 50%;
+
+}
+
+.background span:nth-child(1) {
+  color: #00ffff;
+  top: 11%;
+  left: 70%;
+  animation-duration: 27s;
+  animation-delay: -38s;
+  transform-origin: -13vw 20vh;
+  box-shadow: 40vmin 0 5.27623159814963vmin currentColor;
+}
+
+.background span:nth-child(2) {
+  color: #ff0066;
+  top: 65%;
+  left: 42%;
+  animation-duration: 31s;
+  animation-delay: -38s;
+  transform-origin: -5vw -2vh;
+  box-shadow: -40vmin 0 5.184170988897144vmin currentColor;
+}
+
+.background span:nth-child(3) {
+  color: #00ffff;
+  top: 82%;
+  left: 55%;
+  animation-duration: 22s;
+  animation-delay: -5s;
+  transform-origin: 12vw 13vh;
+  box-shadow: -40vmin 0 5.463879639250077vmin currentColor;
+}
+
+.background span:nth-child(4) {
+  color: #00ffff;
+  top: 99%;
+  left: 78%;
+  animation-duration: 34s;
+  animation-delay: -21s;
+  transform-origin: -13vw -15vh;
+  box-shadow: -40vmin 0 5.816514235259435vmin currentColor;
+}
+
+.background span:nth-child(5) {
+  color: #00ffff;
+  top: 62%;
+  left: 41%;
+  animation-duration: 34s;
+  animation-delay: -12s;
+  transform-origin: -11vw 19vh;
+  box-shadow: -40vmin 0 5.424112432408505vmin currentColor;
+}
+
+.background span:nth-child(6) {
+  color: #fffd70;
+  top: 35%;
+  left: 48%;
+  animation-duration: 23s;
+  animation-delay: -40s;
+  transform-origin: -22vw 12vh;
+  box-shadow: -40vmin 0 5.747039085940094vmin currentColor;
+}
+
+.background span:nth-child(7) {
+  color: #00ffff;
+  top: 14%;
+  left: 15%;
+  animation-duration: 36s;
+  animation-delay: -3s;
+  transform-origin: 14vw 23vh;
+  box-shadow: -40vmin 0 5.489396251697351vmin currentColor;
+}
+
+.background span:nth-child(8) {
+  color: #fffd70;
+  top: 94%;
+  left: 94%;
+  animation-duration: 14s;
+  animation-delay: -24s;
+  transform-origin: 10vw -9vh;
+  box-shadow: 40vmin 0 5.058139556303171vmin currentColor;
+}
+
+.background span:nth-child(9) {
+  color: #ff0066;
+  top: 5%;
+  left: 95%;
+  animation-duration: 36s;
+  animation-delay: -35s;
+  transform-origin: -5vw -7vh;
+  box-shadow: -40vmin 0 5.10030056695164vmin currentColor;
+}
+
+.background span:nth-child(10) {
+  color: #fffd70;
+  top: 18%;
+  left: 72%;
+  animation-duration: 43s;
+  animation-delay: -28s;
+  transform-origin: -16vw -9vh;
+  box-shadow: -40vmin 0 5.925034110310112vmin currentColor;
+}
+
+.background span:nth-child(11) {
+  color: #ff0066;
+  top: 75%;
+  left: 98%;
+  animation-duration: 9s;
+  animation-delay: -12s;
+  transform-origin: -19vw -14vh;
+  box-shadow: -40vmin 0 5.2828025100969125vmin currentColor;
+}
+
+.background span:nth-child(12) {
+  color: #00ffff;
+  top: 70%;
+  left: 59%;
+  animation-duration: 9s;
+  animation-delay: -27s;
+  transform-origin: 16vw -6vh;
+  box-shadow: 40vmin 0 5.136297187615856vmin currentColor;
+}
+
+.background span:nth-child(13) {
+  color: #fffd70;
+  top: 90%;
+  left: 47%;
+  animation-duration: 32s;
+  animation-delay: -12s;
+  transform-origin: 12vw 19vh;
+  box-shadow: 40vmin 0 5.174824870247998vmin currentColor;
+}
+
+.background span:nth-child(14) {
+  color: #fffd70;
+  top: 3%;
+  left: 97%;
+  animation-duration: 19s;
+  animation-delay: -48s;
+  transform-origin: 22vw -7vh;
+  box-shadow: -40vmin 0 5.008197750735275vmin currentColor;
+}
+
+.background span:nth-child(15) {
+  color: #ff0066;
+  top: 13%;
+  left: 62%;
+  animation-duration: 40s;
+  animation-delay: -6s;
+  transform-origin: -1vw 23vh;
+  box-shadow: 40vmin 0 5.809236438759103vmin currentColor;
+}
+
+.background span:nth-child(16) {
+  color: #00ffff;
+  top: 50%;
+  left: 42%;
+  animation-duration: 30s;
+  animation-delay: -26s;
+  transform-origin: -14vw -10vh;
+  box-shadow: -40vmin 0 5.7660568101511345vmin currentColor;
+}
+
+.background span:nth-child(17) {
+  color: #fffd70;
+  top: 37%;
+  left: 18%;
+  animation-duration: 44s;
+  animation-delay: -6s;
+  transform-origin: 18vw 18vh;
+  box-shadow: 40vmin 0 5.78849992560037vmin currentColor;
+}
+
+.background span:nth-child(18) {
+  color: #ff0066;
+  top: 26%;
+  left: 100%;
+  animation-duration: 27s;
+  animation-delay: -20s;
+  transform-origin: 15vw -9vh;
+  box-shadow: 40vmin 0 5.689608831324933vmin currentColor;
+}
+
+.background span:nth-child(19) {
+  color: #fffd70;
+  top: 11%;
+  left: 74%;
+  animation-duration: 48s;
+  animation-delay: -8s;
+  transform-origin: -8vw 0vh;
+  box-shadow: 40vmin 0 5.504956920087954vmin currentColor;
+}
+
+@keyframes moveAndFade {
+  0% {
+    transform: translate3d(0px, 0px, 0px);
+    opacity: 1;
+  }
+
+  50% {
+    transform: translate3d(100px, 100px, 0px);
+    opacity: 0.5;
+  }
+
+  100% {
+    transform: translate3d(200px, 0px, 0px);
+    opacity: 1;
+  }
 }
